Driver to include JNI files

--- a/driver/.classpath
+++ b/driver/.classpath
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="lib/rxtx-2.1-7-bins-r2/Windows/i368-mingw32">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="driver/lib/rxtx-2.1-7-bins-r2/Windows/i368-mingw32"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" path="lib/rxtx-2.1-7-bins-r2/Mac_OS_X">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="driver/lib/rxtx-2.1-7-bins-r2/Mac_OS_X"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/RXTXcomm.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/rxtx-2.1-7-bins-r2/RXTXcomm.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="driver/lib/rxtx-2.1-7-bins-r2/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
