Let it run on win32

--- a/software/de.tu_darmstadt.sport.fvf/build.properties
+++ b/software/de.tu_darmstadt.sport.fvf/build.properties
@@ -3,6 +3,6 @@ bin.includes = META-INF/,\
                splash.bmp,\
                plugin_customization.ini,\
                plugin.xml,\
-               lib/,\
                bin/,\
-               src/
+               src/,\
+               lib/
